// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-return-type.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor | undefined> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributes"] | undefined
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor & undefined> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor["attributes"]> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<keyof Descriptor> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor[]> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
> => {};

=====================================output=====================================
export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor | undefined> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributes"] | undefined
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor & undefined> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor["attributes"]> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<keyof Descriptor> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<Descriptor[]> => {};

export const getVehicleDescriptor = async (
  vehicleId: string
): Promise<
  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
> => {};

================================================================================
`;

exports[`issue-6899.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const getUnusedAuthorizationHoldDocuments = async (): Promise<DocumentData[]> => {}

const firestorePersonallyIdentifiablePaths: Array<
  keyof Collections.Users.Entity
> = []

export const SUPPORTED_VEHICLE_TYPES: Array<
  Collections.VehiclesStates.Entity['type']
> = Object.values(Collections.VehiclesStates.Type);

=====================================output=====================================
const getUnusedAuthorizationHoldDocuments = async (): Promise<
  DocumentData[]
> => {};

const firestorePersonallyIdentifiablePaths: Array<
  keyof Collections.Users.Entity
> = [];

export const SUPPORTED_VEHICLE_TYPES: Array<
  Collections.VehiclesStates.Entity["type"]
> = Object.values(Collections.VehiclesStates.Type);

================================================================================
`;

exports[`object-method.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default {
  load<K, T>(k: K, t: T) {
    return {k, t};
  }
}

=====================================output=====================================
export default {
  load<K, T>(k: K, t: T) {
    return { k, t };
  },
};

================================================================================
`;
